apps/production/media/checkrr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: checkrr

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`checkrr.local.hejsan.xyz`)
      kind: Rule
      services:
        - name: checkrr
          port: http

  tls:
    secretName: local-hejsan-xyz-tls
